--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "firebase": "^8.2.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^3.0.4",
-    "react-hot-toast": "^2.4.0"
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
+    "react-markdown": "^8.0.6"
   }
 }
